--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -14,6 +14,12 @@ toc: true
 
 **Mark Rover I** es un sistema que permite a un vehı́culo ser controlado a distancia; además, cuenta con la autonomı́a para esquivar obstáculos. Es un proyecto que combina la electrónica con el aprendizaje automático y el internet de las cosas.
 
+**Autores**
+
+- Pedro Andrés Hernández Amador
+- Jesús Ángel Carmona Álvarez
+- Marcos Abraham Sánchez Galindo
+
 ### Especificaciones funcionales
 
 - El vehı́culo puede ser controlado desde cualquier lugar del mundo mediante una conexión a Internet.
@@ -499,7 +505,7 @@ COMMIT;
 
 La lógica para el control del vehı́culo es muy sencilla. Como ya se ha explicado antes, el Módulo NodeMCU Esp8266 se comunica concurrentemente con el servidor para obtener la instrucción del usuario. Después, con un bloque de sentencias If/Else se identifica la acción a realizar que puede ser: ejecutar una instrucción directa ó predecir la dirección con la red neuronal. Finalmente, se le aplica el determinado voltaje a los pines del chip L293D. Todo este proceso se ejecuta en el Módulo NodeMCU Esp8266.
 
-```arduino
+```c
 // Librerias auxiliares para el modulo NodeMCU ESP8266
 #include <ESP8266WiFi.h>
 #include <WiFiClient.h>
@@ -791,7 +797,7 @@ $$
  W = W - \alpha * \nabla W
 $$
 
-Una de las mejoras al Descenso de Gradiente, AdaGrad (Adaptative Gradient) busca adaptar la tasa de aprendizaje de tal modo que los parámetros que sufre menos actualizaciones se modifiquen con un paso más grande, y que los parámetros
+Una de las mejoras al Descenso de Gradiente, **AdaGrad** (Adaptative Gradient) busca adaptar la tasa de aprendizaje de tal modo que los parámetros que sufre menos actualizaciones se modifiquen con un paso más grande, y que los parámetros
 que se actualizan más a menudo se modifiquen con un paso más pequeño. Para ello, almacena la sumatoria C del cuadrado de los gradientes para cada parámetro.
 
 $$
@@ -800,3 +806,384 @@ $$
     & W = W - \alpha * \frac{\nabla W}{\sqrt{C + \epsilon}}
 \end{align*}
 $$
+
+**AdaDelta** también busca adaptar la tasa de aprendizaje siguiendo el mismo principio que AdaGrad. En el optimizador anterior puede darse el caso en el que la tasa de aprendizaje se reduzca en muy pocas iteraciones a un valor muy pequeño debido a actualizaciones tempranas muy grandes, por lo que los parámetros correspondientes prácticamente dejarán de entrenarse. La idea de AdaDelta es prestar mucha más atención a la sumatoria C de los gradientes más recientes (Media móvil exponencial) y se actualiza recursivamente como:
+
+$$
+\begin{align*}
+    C_t = \beta C_{t-1} + (1 - \beta) \nabla W^2
+\end{align*}
+$$
+
+Con $$\beta$$ comúnmente igual a 0.9.
+
+Además, este algoritmo presenta la opción de omitir una tasa de aprendizaje
+inicial, calculándola como la media móvil exponencial de la diferencia de los pesos
+la iteración t:
+
+$$
+\begin{align*}
+    & \Delta W_t = W_t - W_{t-1} \\
+    & D_t = \beta D_{t-1} + (1 - \beta) \Delta W_t^2 \\
+\end{align*}
+$$
+
+El algoritmo se define como:
+
+$$
+\begin{align*}
+    & W_{t+1} = W_t - \frac{\sqrt{D_{t-1} + \epsilon}}{\sqrt{C_t + \epsilon}} * \nabla W_t
+\end{align*}
+$$
+
+El optimizador que utilizamos en la red neuronal, **RMSProp**, es exactamente lo mismo que AdaDelta pero utiliza una tasa de aprendizaje inicial $$\alpha$$:
+
+$$
+\begin{align*}
+    & C_t = \beta C_{t-1} + (1 - \beta) \nabla W^2 \\
+    & W_{t+1} = W_t - \frac{\alpha}{\sqrt{C_t + \epsilon}} * \nabla W_t
+\end{align*}
+$$
+
+### Estrategia de implementación
+
+Como ya se mencionó, no existe alguna herramienta para el Arduino Uno que nos permita gestionar el entrenamiento y uso de una red neuronal. Por este motivo
+nuestra estrategia de implementación es la siguiente:
+
+1. Crear la red neuronal y entrenarla en Tensorflow.
+2. Copiar las matrices de pesos y sesgos al programa de Arduino.
+3. Realizar ”manualmente” las operaciones matriciales cada vez que le solicitemos un resultado a la red neuronal.
+
+#### Entrenamiento en Tensorflow
+
+```python
+# Librerias necesarias
+import tensorflow as tf
+import numpy as np
+import matplotlib.pyplot as plt
+import math
+from tensorflow.keras import layers
+
+# ----- DATOS DE ENTRENAMIENTO -----
+# Entradas
+X = np.array([[0,0,0],
+     [0,0,1],
+     [0,1,0],
+     [0,1,1],
+    [1,0,0],
+    [1,0,1],
+    [1,1,0],
+    [1,1,1]])
+
+# Salidas
+Y = np.array([[0,1,0,1],
+              [1,0,0,0],
+              [1,0,0,0],
+              [1,0,0,0],
+              [0,0,1,0],
+              [0,0,1,0],
+              [0,0,1,0],
+              [0,0,1,0]])
+
+# Red neuronal
+model = tf.keras.Sequential()
+model.add(layers.Dense(4, activation="sigmoid", input_shape=(1,3)))
+model.add(layers.Dense(3, activation="sigmoid"))
+model.add(layers.Dense(4))
+model.summary()
+
+# Compilacion del modelo
+model.compile(optimizer="rmsprop", loss="mse", metrics=['mse'])
+
+# Entrenamiento del modelo
+history = model.fit(X,
+                    Y,
+                    epochs=8000,
+                    verbose=False)
+
+# Grafica del error
+loss = history.history["loss"]
+epochs = range(1, len(loss)+1)
+plt.plot(epochs, loss, 'bo', label="Training loss")
+
+# Se extraen los parametros entrenados de la red neuronal y se les da formato
+# para copiarlos directamente al codigo de Arduino
+s = "// ****************************** RED NEURONAL ******************************\n\n"
+for i in range(0,len(model.layers)):
+  matriz_pesos = model.layers[i].get_weights()[0]
+  bias = model.layers[i].get_weights()[1]
+  s += f"#define RENSWLAYER{i} {matriz_pesos.shape[0]}\n"
+  s += f"#define COLSWLAYER{i} {matriz_pesos.shape[1]}\n"
+  s += f"BLA::Matrix<RENSWLAYER{i},COLSWLAYER{i}> weights_layer{i} = " + str(matriz_pesos.tolist()).replace("[[", "{").replace("[", "").replace("],", ",\n").replace("]]", "}") +";\n\n"
+  s += f"#define TAMBLAYER{i} {bias.shape[0]}\n"
+  s += f"BLA::Matrix<1,TAMBLAYER{i}> bias_layer{i} = " + str(bias.tolist()).replace("[", "{").replace("]", "}") + ";\n\n\n"
+
+print(s)
+```
+
+<div style="text-align:center">
+    <img style="width:100%; height:100%;" src="../assets/images/markrover/graficaentrenamiento.png" />
+    <p><i>Figura 10. Resultados del entrenamiento</i></p>
+</div>
+
+A pesar de que el conjunto de datos de entrenamiento únicamente continene ocho ejemplos, al algoritmo de optimización le toma tres mil iteraciones minimizar el error. Debido a la naturaleza del proyecto, la validación pudo realizarse en vivo observando el funcionamiento del vehı́culo.
+
+#### Red neuronal en Arduino
+
+```c
+// Libreria auxiliar para la multiplicacion de matrices
+#include <BasicLinearAlgebra.h>
+using namespace BLA;
+
+// Red neuronal obtenida con el script training.py
+// ********** RED NEURONAL **********
+
+// Pesos capa 0
+#define RENSWLAYER0 3
+#define COLSWLAYER0 4
+BLA::Matrix<RENSWLAYER0,COLSWLAYER0> weights_layer0 = {4.088535308837891, 4.528482437133789, -5.082963466644287, 4.40722131729126,
+ 0.3427855372428894, -0.2766473889350891, -5.3058271408081055, 4.766732215881348,
+ -0.17308340966701508, 0.23171192407608032, -5.975094795227051, 4.971473693847656};
+
+// Sesgos capa 0
+#define TAMBLAYER0 4
+BLA::Matrix<1,TAMBLAYER0> bias_layer0 = {-0.8993253111839294, -0.795426070690155, 0.29666513204574585, -0.17137248814105988};
+
+// Pesos capa 1
+#define RENSWLAYER1 4
+#define COLSWLAYER1 3
+BLA::Matrix<RENSWLAYER1,COLSWLAYER1> weights_layer1 = {-3.1578617095947266, 2.546917676925659, -3.0269694328308105,
+ -3.273172378540039, 2.7451560497283936, -2.9152934551239014,
+ -1.7309777736663818, 1.4869023561477661, 3.257903575897217,
+ 2.383434295654297, -1.1055042743682861, -2.035982370376587};
+
+// Sesgos capa 1
+#define TAMBLAYER1 3
+BLA::Matrix<1,TAMBLAYER1> bias_layer1 = {-0.8317104578018188, 0.7105112671852112, 0.5773258805274963};
+
+// Pesos capa 2
+#define RENSWLAYER2 3
+#define COLSWLAYER2 4
+BLA::Matrix<RENSWLAYER2,COLSWLAYER2> weights_layer2 = {2.209212064743042, 0.12566913664340973, -1.9509284496307373, -0.27883559465408325,
+ -0.8671445846557617, 0.6196681261062622, 0.9349763989448547, -0.10505367070436478,
+ -0.40017542243003845, 2.3796539306640625, -1.9373548030853271, 2.335737705230713};
+
+// Sesgos capa 2
+#define TAMBLAYER2 4
+BLA::Matrix<1,TAMBLAYER2> bias_layer2 = {0.8409974575042725, -0.6162226796150208, 0.09114780277013779, 0.1059432402253151};
+
+// Funcion de activacion
+float logistica(float x){
+  return 1.0/(exp(-x)+1.0);
+}
+
+// *******************************************************
+
+// ---Vectores para almacenar las salidas de las capas ---
+// Entrada a la red neuronal
+#define TAMENTRADA 3
+BLA::Matrix <1,TAMENTRADA> input;
+
+//Salida de la capa 0
+BLA::Matrix <1, COLSWLAYER0> outputLayer0;
+//Salida de la capa 1
+BLA::Matrix <1, COLSWLAYER1> outputLayer1;
+//Salida de la ultima capa
+BLA::Matrix <1, COLSWLAYER2> output;
+```
+
+#### Operaciones manuales para la predicción
+
+Hemos dicho que los cálculos para realizar predicciones deben hacerse ”manualmente”. Para hacer esto de una forma óptima, las operaciones se desarrollarán matricialmente.
+
+Recordemos que la salida de una sola neurona es:
+
+<div style="text-align:center">
+    <img style="width:100%; height:100%;" src="../assets/images/markrover/unaneurona.png" />
+    <p><i>Figura 11. Salida de una sola neurona</i></p>
+</div>
+
+donde:
+
+- $$f$$: Función de activación (En nuestro caso, la función logı́stica o sigmoidal).
+- $$b$$: Sesgo de la neurona.
+- $$x_i$$: i-ésimo dato de entrada de la neurona.
+- $$w_i$$: i-ésimo peso de entrada de la neurona.
+
+Matricialmente podemos calcular la salida de cada capa de la red neuronal de la siguiente forma:
+
+Sean:
+
+- $$v_i$$: Vector de entrada a la capa i (con dimensiones 1xm).
+- $$W_i$$: Pesos de la capa i (con dimensiones mxn).
+- $$b_i$$ : Vector de sesgos de las neuronas de la capa i (1xn).
+- $$f$$: Función de activación (aplicada elemento a elemento).
+
+El vector de salida de la capa i se calculará como:
+
+$$
+\begin{align*}
+    V_{out_{\{i\}}} = f((v_i * W_i) + b_i)
+\end{align*}
+$$
+
+Recordemos que estamos usando la función logı́stica porque tenemos variables dicotómicas. Entonces, como último paso, necesitamos establecer un umbral para decidir si la salida final será 0 o 1.
+
+Para cada elemento en el vector de salida:
+
+- Si elemento < 0.55 entonces: elemento = 0
+- En otro caso, elemento = 1
+
+A continuación, el código para la ejecución de la red neuronal en Arduino:
+
+```c
+void setup() {
+  // Se inicializa el puerto serial
+  Serial.begin(115200);
+
+  // Se inicializan los pines de los sensores
+  pinMode(sensIzqTrig, OUTPUT);
+  pinMode(sensCentroTrig, OUTPUT);
+  pinMode(sensDerTrig, OUTPUT);
+
+  pinMode(sensIzqEcho, INPUT);
+  pinMode(sensCentroEcho, INPUT);
+  pinMode(sensDerEcho, INPUT);
+
+  // Led para indicar si el arduino esta controlando
+  pinMode(LED_BUILTIN, OUTPUT);
+  digitalWrite(LED_BUILTIN, LOW);
+  mensajeEsp8266 = 0;
+}
+
+// Funcion para las lecturas de los sensores
+float readSensor(int trig, int echo){
+  float duration;
+  float distance;
+  unsigned long currentMillis;
+
+  // Se inicializa el sensor apagando el Trigger 2 microsegundos (.002 milisegundos)
+  currentMillis = millis();
+  digitalWrite(trig, LOW);
+  while (millis() < currentMillis + .002);
+
+  // Se envia una senal de sonido por 10 microsegundos (.01 milisegundos)y despues se
+  // apaga el Trigger para que no interfiera con la senal que rebota
+  currentMillis = millis();
+  digitalWrite(trig, HIGH);
+  while (millis() < currentMillis + .01);
+  digitalWrite(trig, LOW);
+
+  // Se cuenta el tiempo que tarda en llegar la senal rebotada
+  duration = pulseIn(echo, HIGH);
+
+  // Se calcula la distancia en centimetros
+  // (de acuerdo a la formula del fabricante)
+  distance = duration / 58;
+  //return distance;
+
+  if (distance >= 20 && distance <= 400) distance = 10;
+  if (distance < 3 || distance > 400) distance = 0;
+
+  return (20 - distance) / 20;
+
+}
+
+unsigned long currentMillis;
+String resultado = "";
+char* cString;
+
+void loop() {
+  // Cuando existe un mensaje por parte del
+  // Modulo NodeMCU Esp8266
+  if(Serial.available()){
+    // Se lee el mensaje y se realiza una pausa para que el
+    // bufer se vacie
+    mensajeEsp8266 = Serial.read();
+    currentMillis = millis();
+    while (millis() < currentMillis + 300);
+    // Se enciende el led integrado del Arduino para indicar
+    // que esta en accion
+    digitalWrite(LED_BUILTIN, HIGH);
+
+    // Se obtienen las lecturas de cada sensor
+    distSensIzq = readSensor(sensIzqTrig, sensIzqEcho);
+    distSensCentro = readSensor(sensCentroTrig, sensCentroEcho);
+    distSensDer = readSensor(sensDerTrig, sensDerEcho);
+
+    // ----- Se calcula la accion con la red neuronal -----
+    // Se inicializa la entrada
+    input << distSensIzq, distSensCentro, distSensDer;
+
+     // Se calcula la activacion de la capa 0
+    outputLayer0 = (input * weights_layer0) + bias_layer0;
+    for(int i = 0 ; i < outputLayer0.GetColCount() ; i++){
+      outputLayer0(0, i) = logistica(outputLayer0(0, i));
+    }
+
+    // Se calcula la activacion de la 1
+    outputLayer1 = (outputLayer0 * weights_layer1) + bias_layer1;
+    for(int i = 0 ; i < outputLayer1.GetColCount() ; i++){
+      outputLayer1(0, i) = logistica(outputLayer1(0, i));
+    }
+
+    // Se calcula la activacion de la capa de salida
+    output = (outputLayer1 * weights_layer2) + bias_layer2;
+    for(int i = 0 ; i < output.GetColCount() ; i++){
+      output(0, i) = logistica(output(0, i));
+    }
+
+    // Se decide la accion a realizar de acuerdo a la salida de la red
+    resultado = "";
+    for(int i = 0 ; i < output.GetColCount() ; i++){
+      if(output(0, i) < .55) output(0, i) = 0;
+      if(output(0, i) >= .55) output(0, i) = 1;
+
+      resultado.concat((int)output(0, i));
+    }
+
+    // El vector de resultados se convierte en una cadena de
+    // caracteres y se envia al modulo NodeMCU Esp8266
+    cString = (char*) malloc(sizeof(char)*(resultado.length() + 1));
+    resultado.toCharArray(cString, resultado.length() + 1);
+    Serial.write(cString);
+    free(cString);
+
+  }
+  // Si no existe ningun mensaje del Modulo NodeMCU Esp8266, entonces el led
+  // no enciende
+  else{
+    digitalWrite(LED_BUILTIN, LOW);   // turn the LED on
+  }
+}
+```
+
+## Posibles mejoras
+
+Existen varios caminos que podemos tomar en un futuro para mejorar el funcionamiento de Mark Rover I. Estas rutas se han trazado en base a las observaciones de las pruebas realizadas. Por ejemplo:
+
+- **Eliminar puntos ciegos**: Actualmente, el sistema cuenta con tres sensores ultrasónicos fijos únicamente en la parte frontal del chasis y existen separaciones entre ellos. Estas pequeñas brechas se pueden considerar como puntos ciegos y puede darse el caso en el que un objeto lo suficientemente delgado se encuentre justo enfrente de uno de ellos; en este escenario, nuestro sistema no serı́a capaz de detectar el obstáculo y muy probablemente colisione contra él. Otro problema observado en las pruebas fue que en ciertas ocasiones los objetos delgados bloqueaban solo una terminal de algún sensor, en este caso las señales ultrasónicas nunca eran recibias o enviadas debido a la obstrucción. Los puntos de partida para la resolución de estos problemas podrı́an ser:
+
+  - Añadir un sensor extra en la parte trasera del chasis.
+  - Implementar un solo sensor ultrasónico que sea capaz de rotar utilizando un servomotor.
+
+- **Minimizar la posibilidad de que el vehı́culo se cicle**: Recordemos que para que la corriente fluya en algún sentido y haga girar una llanta, se necesita
+  una diferencia de potencial entre los dos pines del chip L293D que la controlan. Existe la posibilidad de que la red neuronal nos diga que apliquemos el mismo voltaje a todos los pines del vehı́culo, por lo tanto, no se moverı́a. Esto sucederı́a principalmente debido a errores naturales en las lecturas de los sensores ultrasónicos. En estos casos deberı́amos analizar muchos escenarios de prueba y establecer un algoritmo para validar, como segunda fase de predicción, la salida de la red neuronal.
+
+- **Variar la velocidad del vehı́culo de acuerdo a la distancia a la que se encuentre un obstáculo**: En este caso los datos de entrenamiento cambiarı́an al igual que la forma de las entradas y salidas de la red neuronal. Posiblemente se necesitarı́a un modelo diferente.
+
+- **Implementar una red neuronal convolucional para trazar rutas**: En este caso, el sistema de evasión de obstáculos desarrollado podrı́a implementarse como un módulo adicional e independiente. Necesitarı́amos añadir una cámara de video al sistema y utilizar una red neuronal convolucional para la clasificación de imágenes. Probablemente este nuevo modelo podrı́a ser demasiado para el microcontrolador, podrı́amos optar por alguna de las siguientes opciones:
+  - Utilizar una Raspberry para procesar las imágenes.
+  - Montar la red neuronal en un servidor externo y comunicarse con él medante una conexión a internet.
+
+## Demostración
+
+Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
+
+<div class="icontain">
+  <iframe src="//www.youtube.com/embed/IXZhkvh-zMw" allowfullscreen></iframe>
+</div>
+
+## Recursos
+
+El código fuente completo se encuentra en este [repositorio de Github](https://github.com/Pedro-Hdez/MarkRoverI)
