--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -787,7 +787,7 @@ Por las razones anteriores, se utilizará una pequeña red con dos capas ocultas
     <p><i>Figura 9. Red neuronal</i></p>
 </div>
 
-### Optimizador
+#### Optimizador
 
 Para lograr que la red neuronal aprenda, hemos utilizado el algoritmo de optimización **RMSProp**. Éste es una variante del optimizador AdaDelta; a su vez, AdaDelta es una mejora del optimizador AdaGrad, que es una mejora al Descenso de Gradiente.
 
