--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1180,7 +1180,7 @@ Existen varios caminos que podemos tomar en un futuro para mejorar el funcionami
 
 Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
 
-<div class="icontain">
+<div class="icontain" width="100%" height="100%">
 
   <iframe src="//www.youtube.com/embed/rC0AX6J5t64" width="100%" height="100%" allowfullscreen></iframe>
 </div>
