--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1180,10 +1180,9 @@ Existen varios caminos que podemos tomar en un futuro para mejorar el funcionami
 
 Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
 
-<div class="icontain" width="100" height="100">
-
-  <iframe src="//www.youtube.com/embed/rC0AX6J5t64" width="100%" height="100%" allowfullscreen></iframe>
-</div>
+<body style="margin:0px;padding:0px;overflow:hidden">
+    <iframe src="//www.youtube.com/embed/rC0AX6J5t64" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+</body>
 
 ## Recursos
 
