--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1180,9 +1180,9 @@ Existen varios caminos que podemos tomar en un futuro para mejorar el funcionami
 
 Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
 
-<body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="//www.youtube.com/embed/rC0AX6J5t64" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
-</body>
+<div class="icontain" style="margin:0;pading:0;height:100%">
+  <iframe src="//www.youtube.com/embed/rC0AX6J5t64" style="margin:0;pading:0;height:100%;display:block;width:100%;border:none" allowfullscreen></iframe>
+</div>
 
 ## Recursos
 
