--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1180,8 +1180,8 @@ Existen varios caminos que podemos tomar en un futuro para mejorar el funcionami
 
 Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
 
-<div class="icontain" style="margin:0;pading:0;height:100%">
-  <iframe src="//www.youtube.com/embed/rC0AX6J5t64" style="margin:0;pading:0;height:100%;display:block;width:100%;border:none" allowfullscreen></iframe>
+<div class="icontain" style="margin:0; pading:0; height:100%">
+  <iframe src="//www.youtube.com/embed/rC0AX6J5t64" style="margin:0; pading:0; height:100%; display:block; width:100%; border:none" ></iframe>
 </div>
 
 ## Recursos
