--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1178,7 +1178,7 @@ Existen varios caminos que podemos tomar en un futuro para mejorar el funcionami
 
 ## Demostración
 
-Hemos grabado un pequeño video demostrando el sistema **Mark Rover I** en acción:
+Hemos grabado un pequeño video del sistema **Mark Rover I** en acción:
 
 <div style="margin:0; pading:0; height:550px">
   <iframe src="//www.youtube.com/embed/rC0AX6J5t64" style="margin:0; pading:0; height:100%; display:block; width:100%; border:none" ></iframe>
