--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -6,7 +6,7 @@ portada: "../assets/images/portadas/markrover_es.png"
 image: assets/images/markrover/mark_rover1.jpeg
 categories: [Arduino, Redes Neuronales, Internet de las Cosas]
 description: "Vehículo controlado por Wi-Fi que previene colisiones implementando una red neuronal sobre el microcontrolador Arduino Uno."
-beforetoc: "En este post se explicará a detalle el código y la estrategia seguida para la construcción del Mark Rover I, un vehículo que puede controlarse remotamente por Internet; además, la implementación de una red neuronal le permite evitar colisionar contra obstáculos."
+beforetoc: "En este post se explicará a detalle el proceso de construcción del sistema Mark Rover I, un vehículo que puede controlarse remotamente por Internet; además, la implementación de una red neuronal le permite evitar colisiones contra obstáculos."
 toc: true
 ---
 
