--- a/_posts/2021-07-05-vista.md
+++ b/_posts/2021-07-05-vista.md
@@ -73,20 +73,20 @@ De igual forma, para terminar su sesión haga clic en `Salir` y volverá a la pa
     <p><i>Figura 2. Pantalla principal para administradores</i></p>
 </div>
 
-#### Para registrar a un Recepcionista:
+#### Registrar a un recepcionista
 
-1. En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Registrar`. También puede utilizar el atajo `Ctrl+N` y a continuación observará la siguiente pantalla:
+En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Registrar`. También puede utilizar el atajo `Ctrl+N` y a continuación observará la siguiente pantalla:
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/PantallaRegistroRecep.png" />
     <p><i>Figura 3. Pantalla de registro de recepcionista</i></p>
 </div>
 
-1. Rellene los campos correspondientes y haga clic en el botón `Registrar` de la pantalla.
+Rellene los campos correspondientes y haga clic en el botón `Registrar` de la pantalla.
 
-#### Para actualizar la información un Recepcionista ya registrado:
+#### Actualizar la información de un recepcionista
 
-1. En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Actualizar`. También puede utilizar el atajo `Ctrl+U` y a continuación observará la siguiente pantalla:
+En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Actualizar`. También puede utilizar el atajo `Ctrl+U` y a continuación observará la siguiente pantalla:
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/PantallaActualizarRecep.png" />
@@ -99,9 +99,9 @@ De igual forma, para terminar su sesión haga clic en `Salir` y volverá a la pa
 
 3. Una vez que haya escrito esta información, haga clic en el botón `Actualizar información` y se guardará esa información en la base de datos.
 
-#### Para Eliminar un Recepcionista:
+#### Eliminar un recepcionista
 
-1. En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Eliminar`. También puede utilizar el atajo `Ctrl+D` y a continuación observará la siguiente pantalla:
+En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Eliminar`. También puede utilizar el atajo `Ctrl+D` y a continuación observará la siguiente pantalla:
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/PantallaEliminarRecep.png" />
@@ -112,7 +112,7 @@ De igual forma, para terminar su sesión haga clic en `Salir` y volverá a la pa
 
 2. Haga clic en el botón `Eliminar` que se encuentra debajo de los campos de información en la ventana y este recepcionista se habrá eliminado de la base de datos.
 
-#### Para consultar los recepcionistas existentes:
+#### Consultar recepcionistas
 
 En la barra de menú superior haga clic en `Recepcionistas` y en el menú desplegable vaya a `Consultar`. También puede utilizar el atajo `Ctrl+C` y a continuación observará la siguiente pantalla:
 
@@ -150,25 +150,25 @@ En la barra de menú superior encontrará los botones de `Inicio` para poder vol
     <p><i>Figura 9. Opciones para gestionar niños</i></p>
 </div>
 
-#### Registrar Niño
+#### Registrar niño
 
 Para registrar un niño en la base de datos:
 
-1. En la barra de menú superior haga clic en `Niños` y en el menú desplegable vaya a `Registrar`. También puede utilizar el atajo `Ctrl+N` y a continuación observará la siguiente pantalla:
+En la barra de menú superior haga clic en `Niños` y en el menú desplegable vaya a `Registrar`. También puede utilizar el atajo `Ctrl+N` y a continuación observará la siguiente pantalla:
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/PrincipalRegistroNino.png" />
     <p><i>Figura 10. Pantalla para el registro de un niño</i></p>
 </div>
 
-1. Rellene todos los campos de información del infante y capture la foto del niño o agréguela desde los archivos locales de la computadora.
+Rellene todos los campos de información del infante y capture la foto del niño o agréguela desde los archivos locales de la computadora.
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/InsertarFotoNino.png" />
     <p><i>Figura 11. Obtención de la foto de un niño</i></p>
 </div>
 
-1. Haga clic en `Siguiente` y observará la siguiente pantalla.
+Haga clic en `Siguiente` y observará la siguiente pantalla.
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/InsertarFotoTutor.png" />
@@ -191,7 +191,7 @@ Una vez realizados los pasos anteriores, el niño o la niña podrá reunirse con
 
 Para registrar al infante sin autorizados haga clic en `Sin autorizados` en el menú desplegable y seleccione `Finalizar registro`.
 
-#### Agregar un autorizado desde el registro:
+#### Agregar un autorizado desde el registro
 
 En el menú desplegable seleccione el número de autorizados y rellene los campos de información de cada uno, de manera similar al registro del tutor.
 
@@ -239,7 +239,7 @@ Para consultar a los infantes puede buscarlos por **ID**, por **Nombre**, O bien
     <p><i>Figura 21. Opciones de consulta de niños</i></p>
 </div>
 
-#### Eliminar un Niño o un Autorizado de éste de la base de datos:
+#### Eliminar a un miño o a un autorizado
 
 Para eliminar a un niño del sistema, éste **se deberá haber consultado previamente.**
 
@@ -263,7 +263,7 @@ Para eliminar al autorizado de un niño, en la tabla de resultados de la consult
 
 2. Haga clic en el botón de `Guardar Cambios`
 
-#### Editar información de un Niño o un Tutor:
+#### Editar información de un niño o un tutor
 
 Para editar la información de un niño previamente registrado en el sistema, éste **se deberá haber consultado previamente**.
 
@@ -290,7 +290,7 @@ Para editar la información de un tutor o autorizado, en esta misma pantalla sel
 
 Una vez editada o añadida la información deseada, haga clic en el botón de `Guardar Cambios`.
 
-#### Identificar Tutores
+#### Identificar tutores
 
 Esta es la función principal del sistema: Identificar a los adultos como tutores o autorizados de llevarse a algún niño. Si el adulto no está registrado en la base de datos, se guarda como una persona sospechosa.
 
@@ -303,7 +303,7 @@ Procure tener la cámara posicionada correctamente a una altura donde se puedan 
     <p><i>Figura 27. Pantalla para la identificación de tutores (pantalla principal)</i></p>
 </div>
 
-1. Para ver los infantes que tiene asociado un adulto captado por la cámara, haga clic en el botón de `Capturar`
+Para ver los infantes que tiene asociado un adulto captado por la cámara, haga clic en el botón de `Capturar`
 
 <div style="text-align:center">
     <img style="width:100%; height:100%;" src="../assets/images/vista/IdentificarTutor.png" />
