--- a/_posts/2021-07-05-vista.md
+++ b/_posts/2021-07-05-vista.md
@@ -239,7 +239,7 @@ Para consultar a los infantes puede buscarlos por **ID**, por **Nombre**, O bien
     <p><i>Figura 21. Opciones de consulta de niños</i></p>
 </div>
 
-#### Eliminar a un miño o a un autorizado
+#### Eliminar a un niño o a un autorizado
 
 Para eliminar a un niño del sistema, éste **se deberá haber consultado previamente.**
 
