--- a/_posts/2021-07-04-mark-rover-1.md
+++ b/_posts/2021-07-04-mark-rover-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Mark Rover I"
-autor: pedro
+author: pedro
 portada: "../assets/images/portadas/markrover_es.png"
 image: assets/images/markrover/mark_rover1.jpeg
 categories: [Arduino, Redes Neuronales, Internet de las Cosas]
