--- a/_posts/2021-07-05-vista.md
+++ b/_posts/2021-07-05-vista.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "VISTA"
-autor: pedro
+author: pedro
 portada: "../assets/images/portadas/vista_es.png"
 image: assets/images/vista/vista.png
 categories: [Java]
